# Fantasy-Valley-X

./: .gitignore  main.py  pyproject.toml
ai/: __init__.py  ai_service.py  example_usage.py
ai/adapters/: ollama_adapter.py  openai_adapter.py
ai/ports/: ai_port.py
assets/map/: map.tmx
components/: animation.py  collider.py  component.py  dialog_box.py  health.py  hitbox.py  layer.py  sound.py  sprite.py  velocity.py
core/: collision_layers.py  game_manager.py  game_world.py  inventory.py  settings.py  world_game.py
entities/: background.py  dynamic_object.py  entity.py  map_tiled.py  npc_milo.py  plant.py  player.py  static_objects.py  trader.py  world.py
systems/: camera_system.py  collision_system.py  hud_system.py  input_system.py  render_system.py  shop_system.py  sky_system.py  sound_system.py
