[project]
name = "fantasy-valley-x"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.24.0",
    "pygame-ce>=2.5.6",
    "python-dotenv>=1.2.2",
    "pytmx>=3.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai", "core", "entities", "systems", "components"]
